# images_load

./: Cargo.toml  Makefile  build.rs
resources/linux/: images_load.desktop
resources/osx/images_load.app/Contents/: Info.plist
resources/osx/images_load.app/Contents/Resources/: logo.icns
src/: loadfile.rs  main.rs  tip.rs  ui.rs  view.rs
