[package]
name = "images_load"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfd = "0.12.1"
walkdir = "2.4.0"
iced = {git = "https://github.com/iced-rs/iced.git", features = ["image"] }
image = { version = "0.24.7", default-features = false, features = ["png"]}

[build-dependencies]
embed-resource = "2.4"



[profile.release]
lto = true
strip = true
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"