[package]
name = "images_load"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfd = "0.12.1"
walkdir = "2.4.0"
iced = {git = "https://github.com/iced-rs/iced.git", features = ["image"] }
image = { version = "0.24.7",default-features = true}
iced_aw = { git = "https://github.com/iced-rs/iced_aw.git", default-features = false, features = ["modal","card","num-traits","spinner"] }

[build-dependencies]
embed-resource = "2.4"



[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3
