[package]
name = "images_load"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfd = "0.15.1"
walkdir = "2.5.0"
iced = {version = "0.13.1", features = ["image"] }
image = { version = "0.25.5"}
iced_aw = { version = "0.11", default-features = false, features = ["card","num-traits","spinner"] }

[build-dependencies]
embed-resource = "3.0.1"



[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3
